# allegro

./: LICENSE  allegro.cabal
cbits/: Makefile  color_wrappers.c  wrap_colors.hs  wrappers.c
examples/c/: Makefile  bitmap.c  devices.c  event.c  font.c  fullscreen_display.c  sound.c  timer.c  window_display.c
examples/hs/: audio.hs  clicks.hs  font.hs  image.hs  prims.hs  sat-shapes.hs  say.hs  timer.hs  window.hs
src/: Allegro.hs
src/Allegro/: .Display.hs.swp  Audio.hs  C.hsc  Display.hs  DisplayMode.hs  Event.hs  EventQueue.hs  Font.hs  Graphics.hs  Keyboard.hs  Mouse.hs  Primitives.hs  Timer.hs  Transform.hs  Types.hs
src/Allegro/C/: Addon.hsc  Audio.hsc  Display.hsc  DisplayMode.hsc  Event.hsc  EventQueue.hsc  Font.hsc  Graphics.hsc  Image.hsc  Joystick.hsc  Keyboard.hsc  Mouse.hsc  Primitives.hsc  Timer.hsc  Transform.hsc  Types.hs
