name:                allegro
version:             0.1.0.0
synopsis:            A binding to the Allegro library
description:         A binding to the Allegro library
license:             BSD3
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.6

library
  exposed-modules:     Allegro,
                       Allegro.Display,
                       Allegro.DisplayMode,
                       Allegro.EventQueue,
                       Allegro.Graphics,
                       Allegro.Font,
                       Allegro.Keyboard,
                       Allegro.Mouse,
                       Allegro.Primitives,
                       Allegro.Timer,
                       Allegro.Transform
  other-modules:       Allegro.Types,
                       Allegro.C,
                       Allegro.C.Types,
                       Allegro.C.Display,
                       Allegro.C.DisplayMode,
                       Allegro.C.Keyboard,
                       Allegro.C.Mouse,
                       Allegro.C.Joystick,
                       Allegro.C.EventQueue,
                       Allegro.C.Event,
                       Allegro.C.Font,
                       Allegro.C.Timer,
                       Allegro.C.Image,
                       Allegro.C.Audio,
                       Allegro.C.Graphics,
                       Allegro.C.Primitives,
                       Allegro.C.Transform
  build-depends:       base >=4.6, array
  hs-source-dirs:      src
  c-sources:           cbits/wrappers.c,
                       cbits/color_wrappers.c
  build-tools:         hsc2hs
  extra-libraries:     allegro, allegro_image, allegro_font,
                       allegro_ttf, allegro_audio, allegro_acodec,
                       allegro_primitives
  GHC-options:         -Wall -O2
